# MobileApp_Project

./: README.md  requirements.txt
EduGuardian/backend/: .gitignore  .testing.env.coppy  pyproject.toml
EduGuardian/backend/app/: deps.py  main.py  security.py
EduGuardian/backend/app/models/: __init__.py  class_rooms.py  classrooms.py  descriptions.py  images.py  link.py  notification.py  rooms.py  students.py  subjects.py  teachings.py  users.py
EduGuardian/backend/app/routers/: __init__.py  authentication.py  classrooms.py  descriptions.py  images.py  root.py  students.py  subjects.py  teachings.py  test.py  users.py  websocket.py
EduGuardian/backend/scripts/: initial-db.py
EduGuardian/backend/scripts/linux/: run_api
EduGuardian/backend/scripts/mac/: run_api
EduGuardian/backend/scripts/windows/: run_api.bat
EduGuardian/backend/test-data/: test-sqlalchemy.db
EduGuardian/backend/tests/: __init__.py  config.py  conftest.py  test_authentication.py  test_student.py  test_user.py  test_users.py
EduGuardian/frontend/app/: pubspec.yaml
EduGuardian/frontend/app/android/app/: build.gradle
EduGuardian/frontend/app/lib/: get_me.dart  login.dart  main.dart  main_screen.dart
EduGuardian/frontend/app/lib/blocs/: auth_bloc.dart  blocs.dart  (+10 more)
EduGuardian/jenkins/: Jenkinsfile
EduGuarduian/backend/: pyproject.toml
EduGuarduian/backend/app/: config.py  main.py
EduGuarduian/backend/app/models/: __init__.py  user.py
EduGuarduian/backend/app/routers/: __init__.py
EduGuarduian/backend/scripts/mac/: run_api
EduGuarduian/backend/scripts/windows/: run_api.bat
(+89 files in other folders)
